# cemplate

./: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  example.cpp
include/cemplate/: cemplate.hpp
source/: cemplate.cpp
